# CW-2

./: .gitignore  README.md  main.py  pyproject.toml
src/: abstract.py  api.py  storage.py  utils.py  vacancy.py
tests/: test_api.py  test_storage.py  test_utils.py  test_vacancy.py
