[project]
name = "cw-2-hh-ru"
version = "0.1.0"
description = ""
authors = [
    {name = "RVlad",email = "reshetov664@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "cw_2"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
